--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "json-server-deploy",
+  "name": "family-games-server",
   "version": "1.0.0",
-  "description": "Simple json database to deploy to the host of your choice",
+  "description": "Backend for family games project",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,7 +9,7 @@
   "keywords": [
     "json-server,heroku, node, REST API"
   ],
-  "author": "Jesper Orb",
+  "author": "Constantin & Camille Fite",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.16.2"
